# apis-rest-testcases-drf

./: README.md
livraria/: pyproject.toml
livraria/core/: admin.py  models.py  serializers.py  views.py
livraria/core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
livraria/core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGenericView.py  compra.py  livro.py  testesIniciais.py
livraria/livraria/: settings.py  urls.py
